<resources>
    <string name="app_name">ENursery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plot">PlotActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="vgm">VGM</string>
    <string name="plot">Plot</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="pick_image">Pick Image</string>
    <string name="luar_area">Luas Area</string>
    <string name="bibit">Bibit</string>
    <string name="measure">Measure</string>
    <string name="bibitid">BibitId</string>
    <string name="tinggi_tanaman">Tinggi Tanaman</string>
    <string name="cm">CM</string>
    <string name="diameter_batang">Diameter Batang</string>
    <string name="jumlah_daun">Jumlah Daun</string>
    <string name="foto_bibit">Foto Bibit</string>
    <string name="simpan">Simpan</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="masukkan_jumlah_daun">Masukkan jumlah daun</string>
    <string name="masukkan_diameter_batang">Masukkan diameter batang</string>
    <string name="masukkan_tinggi_tanaman">Masukkan tinggi tanaman</string>
    <string name="id_bibit">ID Bibit: %s</string>
    <string name="vgm_input">VGM Input</string>
    <string name="jumlah_bibit">Jumlah Bibit</string>
    <string name="helai">Helai</string>
    <string name="wilayah_kerja">Wilayah Kerja</string>
    <string name="nama_pekerja">Nama Pekerja</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="jumlah_vgm">Jumlah VGM</string>
    <string name="ha">ha</string>
    <string name="unit">Unit</string>
    <string name="sampel">Sampel</string>
    <string name="luas">Luas</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggal_tanam">Tanggal Tanam</string>
    <string name="tanggal_transplanting">Tanggal Transplanting</string>
    <string name="varietas">Varietas</string>
    <string name="Status">Status</string>
    <string name="lihat">Lihat Baris</string>
    <string name="lihat_foto">Lihat Foto</string>
    <string name="tinggi">Tinggi</string>
    <string name="diameter">Diameter</string>
    <string name="lebar">Lebar</string>
    <string name="unduh_data">Unduh Data</string>
</resources>