<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvLihatBaris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lihat"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="?android:attr/selectableItemBackground" />

    <TextView
        android:id="@+id/tvEditPlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="?android:attr/selectableItemBackground" />

    <TextView
        android:id="@+id/tvDeletePlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hapus"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@android:color/holo_red_dark" />
</LinearLayout>
