<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="16dp"
    android:paddingStart="32dp"
    android:paddingEnd="16dp">

    <!-- Content -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvNamaUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Diinput oleh: Agus"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/Status"
                android:textColor="@color/textColorPrimary"
                android:contentDescription="@string/Status" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTinggiTanaman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/tinggi"/>

                <TextView
                    android:id="@+id/tvDiameterBatang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/diameter"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvJumlahDaun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/jumlah_daun"/>

                <TextView
                    android:id="@+id/tvLebarPetiole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:text="@string/lebar"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLihatFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_foto"
                android:textColor="@color/main"/>

            <TextView
                android:id="@+id/tvTanggalInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4 Apr 2025 17:03 WIB"
                android:textColor="@color/textColorPrimary"
                android:gravity="end"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
