<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.plot.PlotFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapContainer"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="12dp"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <LinearLayout
            android:id="@+id/plotContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="back"
                android:src="@drawable/ic_back"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/plotName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/plot"
                android:layout_marginHorizontal="16dp" />

            <ImageButton
                android:id="@+id/ibNext"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="next"
                android:src="@drawable/ic_next"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luar_area"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_tanam"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_transplanting"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/varietas"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah_bibit"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah_vgm"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLuasArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20-03-2025"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvTanggalTanam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20-03-2025"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvTanggalTransplanting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20-03-2025"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:id="@+id/tvVarietas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="damimas"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:id="@+id/tvJumlahBibit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />

                <TextView
                    android:id="@+id/tvJumlahVgm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="6dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
